tests/http/snapshots/http__legacy_admin__channels_wrong_method_without_key.snap
---
source: tests/http/legacy_admin.rs
expression: "get(\"/admin/channels\").send().await"
---
GET /admin/channels
status: 403 Forbidden
content-type: text/plain; charset=utf-8
x-rustlog-capabilities: arbitrary-range-query,search,stats,namehistory
---
No, I don't think so
