tests/http/snapshots/http__legacy_admin__firehose_wrong_method_without_key.snap
---
source: tests/http/legacy_admin.rs
expression: "request(Method::PATCH, \"/admin/firehose\").send().await"
---
PATCH /admin/firehose
status: 403 Forbidden
content-type: text/plain; charset=utf-8
x-rustlog-capabilities: arbitrary-range-query,search,stats,namehistory
---
No, I don't think so
