tests/http/snapshots/http__legacy_admin__join_channels_without_key.snap
---
source: tests/http/legacy_admin.rs
expression: "request(Method::POST, \"/admin/channels\").json(CHANNELS).send().await"
---
POST /admin/channels
status: 403 Forbidden
content-type: text/plain; charset=utf-8
x-rustlog-capabilities: arbitrary-range-query,search,stats,namehistory
---
No, I don't think so
