tests/http/snapshots/http__legacy_admin__unknown_route.snap
---
source: tests/http/legacy_admin.rs
expression: "get(\"/admin/unknown\").send().await"
---
GET /admin/unknown
status: 400 Bad Request
content-type: text/plain; charset=utf-8
x-rustlog-capabilities: arbitrary-range-query,search,stats,namehistory
---
Invalid URL: unknown variant `admin`, expected `channel` or `channelid`
